# Robo-Arm-5000

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
Robotic arm/3D print files/: Arm 1 wire cover.3MF  Arm rotate.3MF  Bearing bottom.3MF  Bearing holder top.3MF  arm 2 wire cover.3MF  base mount.3MF
Robotic arm/CAD/: Base.3MF  Clamp body.3MF  Clamp screw.3MF  arm 1.3MF  arm 3.3MF
Robotic arm/CAD/Source files/: Arm para.SLDPRT  Controller assm.SLDASM  arm 1.SLDPRT  arm 2.SLDPRT  arm 3.SLDPRT  hand 1.SLDPRT
Robotic arm/CAD/Source files/OTC/: 20kg servo.SLDPRT  2cb board.SLDASM  Mini toggle switch.SLDPRT  PotentiometerB10K.SLDPRT
Robotic arm/CAD/Source files/OTC/micro switch/: Micro Limit Switch.SLDASM
documents/: Final_reflection.md  checkpoint3_plan.txt  checkpoint3_reflection.txt
src/: Drive.cpp  Drive.h  ElectroMagnet.cpp  ElectroMagnet.h  Grabber.cpp  Grabber.h  Input_control.cpp  Input_control.h  Kinematics.cpp  Kinematics.h  MotionTracker.cpp  MotionTracker.h  PCA9685.h  Pot.cpp  Pot.h  Servo_c.cpp  Servo_c.h  Servo_control.cpp  Servo_control.h  ToolHead.cpp  ToolHead.h  Tool_head.cpp  Tool_head.h  main.cpp
